data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1778.wast
;; 9. **Test Case 9**: Implement a `br_if` within a loop that includes multiple nested `if` blocks, specifically targeting proper backward branching and operand stack resolutions.    - **Constraint Checked**: Correct behavior of loops with nested conditions under backward branching.    - **CFG Relation**: CFG potentially having incorrect backward jumps or unresolved stack states during conditional branching in loops.

(assert_invalid
  (module
    (func $loop-nested-ifs
      (loop (result i32)
        (if (i32.const 1)
          (then
            (if (i32.const 0) (then (br_if 1 (i32.const 1))))
          )
        )
        (br_if 0 (i32.const 0))
      )
    )
  )
  "type mismatch"
)